# api-docs-mcp

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  main.py
src/api_docs_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api_docs_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/crawler/: __init__.py  crawler.py  parser.py
src/mcp/: __init__.py  resources.py
src/storage/: models.py  repository.py
storage/: site_info.json
